[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/flame_going_out.mp3" type="AudioStream" id=1]
[ext_resource path="res://src/Global/Global.gd" type="Script" id=2]
[ext_resource path="res://assets/rat_dying.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/secret_reveal.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/boss_hit_1.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/boss_hit_2.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/boss_hit_4.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/boss_hit_3.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/player_hit_sound.mp3" type="AudioStream" id=9]

[node name="Global" type="Node"]
script = ExtResource( 2 )

[node name="PlayerDyingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="RatDyingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SecretRevealSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BossHitSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="BossHitSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="BossHitSound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="BossHitSound4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="PlayerHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
